# opengltut

./: .clang-format  BUILD  MODULE.bazel  README.md  camera.h  main.cc  mesh.h  model.cc  model.h  shader.frag  shader.fs  shader.gs  shader.h  shader.vert  shader.vs  shader0.fs  shader1.fs  shader2.fs  shader_instance.vs  shader_light.frag  shader_light.vert  shader_normals.vs  shadow_shader.fs  stencil.vert  texture.h
hello_shader/: main.cc  shader.vert
